stop persisting all jobs in db
